--- a/next.html
+++ b/next.html
@@ -2,178 +2,227 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Romantic Celebration 🎆</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Naina 🌙</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to top, #2c3e70, #020111);
-    font-family: 'Dancing Script', cursive;
-    overflow: hidden;
-    color: white;
-  }
+html,body{
+ margin:0;
+ width:100%;
+ height:100%;
+ overflow:hidden;
+ font-family:'Dancing Script',cursive;
+ color:white;
+ background: linear-gradient(to top, #2c3e70, #020111); /* SAME AS INDEX */
+}
 
-  /* --- Gift Section --- */
-  #gift-container {
-    text-align: center;
-    cursor: pointer;
-    z-index: 20;
-  }
+/* Fireworks canvas */
+canvas{
+ position:fixed;
+ inset:0;
+ pointer-events:none;
+ z-index:1;
+}
 
-  .gift-box {
-    width: 150px;
-    animation: bounce 2s infinite;
-    filter: drop-shadow(0 0 15px #ff69b4);
-  }
+/* Center content */
+.center{
+ position:absolute;
+ inset:0;
+ display:flex;
+ flex-direction:column;
+ justify-content:center;
+ align-items:center;
+ text-align:center;
+ z-index:5;
+}
 
-  @keyframes bounce {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-20px); }
-  }
+h1{
+ font-size:3rem;
+ text-shadow:2px 2px 15px #000;
+}
 
-  /* --- Birthday Content (Hidden) --- */
-  #main-content {
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    animation: fadeIn 2s ease-in;
-    z-index: 10;
-  }
+p{
+ font-size:1.5rem;
+ text-shadow:1px 1px 8px #000;
+}
 
-  @keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.8); }
-    to { opacity: 1; transform: scale(1); }
-  }
+button{
+ margin-top:20px;
+ padding:15px 40px;
+ font-size:1.2rem;
+ border:none;
+ border-radius:30px;
+ background:#ff69b4;
+ color:white;
+ cursor:pointer;
+ box-shadow:0 0 20px #ff1493;
+ transition:.2s;
+}
+button:hover{transform:scale(1.1)}
 
-  /* --- 3-Tier Cake Styling --- */
-  .cake {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    margin-bottom: 40px;
-  }
+/* Stars */
+.star{
+ position:absolute; width:2px; height:2px;
+ background:white; opacity:.8;
+ animation:twinkle 2s infinite alternate;
+}
+@keyframes twinkle{from{opacity:.3}to{opacity:1}}
 
-  .tier {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #f3e5f5;
-    border-radius: 10px 10px 0 0;
-    box-shadow: inset 0 -5px 0 rgba(0,0,0,0.1);
-  }
+/* Balloons */
+.balloon{
+ position:absolute;
+ width:32px;
+ height:45px;
+ border-radius:50%;
+ animation: floatBalloon 9s linear forwards;
+ z-index:3;
+}
 
-  .bottom { width: 150px; height: 60px; bottom: 0; background: #ffc1e3; }
-  .middle { width: 110px; height: 50px; bottom: 50px; background: #f8bbd0; }
-  .top    { width: 70px;  height: 40px; bottom: 95px; background: #f48fb1; }
-
-  .candle-container {
-    position: absolute;
-    top: -25px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 10px;
-  }
-
-  .candle { width: 8px; height: 40px; background: linear-gradient(to bottom, #fff, #ffeb3b); position: relative; }
-  .flame {
-    position: absolute; top: -15px; left: 50%; transform: translateX(-50%);
-    width: 10px; height: 15px; background: orange; border-radius: 50%;
-    box-shadow: 0 0 10px gold; animation: flicker 0.1s infinite alternate;
-  }
-
-  @keyframes flicker {
-    from { transform: translateX(-50%) scale(1); }
-    to { transform: translateX(-50%) scale(1.1) rotate(2deg); }
-  }
-
-  h1 { font-size: 4rem; text-shadow: 2px 2px 12px #000; margin: 10px 0; text-align: center; }
-  p { font-size: 1.5rem; text-shadow: 1px 1px 8px #000; margin-bottom: 30px; }
-
-  button {
-    padding: 15px 40px; font-size: 1.2rem; border: none; border-radius: 30px;
-    background: #ff69b4; color: white; cursor: pointer;
-    box-shadow: 0 0 20px #ff1493; transition: .2s;
-  }
-  button:hover { transform: scale(1.1); }
+@keyframes floatBalloon{
+ from{transform:translateY(0)}
+ to{transform:translateY(-120vh)}
+}
 </style>
 </head>
+
 <body>
 
-<div id="gift-container" onclick="openGift()">
-    <img src="https://cdn-icons-png.flaticon.com/512/214/214305.png" class="gift-box" alt="Gift">
-    <p>Tap to open your surprise...</p>
+<!-- Fireworks -->
+<canvas id="fireworks"></canvas>
+
+<!-- Text (UNCHANGED) -->
+<div class="center">
+ <h1>Time to Celebrate! 🎉</h1>
+ <p>The countdown is over...</p>
+ <button onclick="goToCake()">Let's Celebrate 💖</button>
+ <p>Enjoy this magical moment ✨</p>
 </div>
 
-<div id="main-content">
-    <div class="cake">
-      <div class="candle-container">
-        <div class="candle"><div class="flame"></div></div>
-        <div class="candle"><div class="flame"></div></div>
-        <div class="candle"><div class="flame"></div></div>
-      </div>
-      <div class="tier top"></div>
-      <div class="tier middle"></div>
-      <div class="tier bottom"></div>
-    </div>
+<!-- Music -->
+<audio autoplay loop>
+ <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_9c1b0e8f45.mp3">
+</audio>
 
-    <h1>Happy Birthday Naina 🌙</h1>
-    <p>It's your special day! 💖</p>
-
-    <button onclick="continueNext()">Continue</button>
-</div>
-
-<audio id="music" loop>
-  <source src="https://www.mboxdrive.com/i-think-they-call-this-love.mp3" type="audio/mpeg">
+<!-- Firework blast sound -->
+<audio id="boom">
+ <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_1b6d6f6b2f.mp3">
 </audio>
 
 <script>
-function openGift() {
-    // 1. Play Music
-    const music = document.getElementById('music');
-    music.play().catch(e => console.log("Playback blocked"));
+/* ================= REAL FIREWORKS ================= */
+const canvas = document.getElementById("fireworks");
+const ctx = canvas.getContext("2d");
+canvas.width = innerWidth;
+canvas.height = innerHeight;
 
-    // 2. Hide Gift / Show Cake
-    document.getElementById('gift-container').style.display = 'none';
-    document.getElementById('main-content').style.display = 'flex';
+window.onresize = () => {
+ canvas.width = innerWidth;
+ canvas.height = innerHeight;
+};
 
-    // 3. Launch Fireworks & Confetti
-    var duration = 5 * 1000;
-    var animationEnd = Date.now() + duration;
-    var defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 0 };
+const fireworks = [];
+const particles = [];
+stars();
+const boom = document.getElementById("boom");
 
-    function randomInRange(min, max) {
-      return Math.random() * (max - min) + min;
-    }
-
-    var interval = setInterval(function() {
-      var timeLeft = animationEnd - Date.now();
-
-      if (timeLeft <= 0) {
-        return clearInterval(interval);
-      }
-
-      var particleCount = 50 * (timeLeft / duration);
-      // Fireworks from left and right
-      confetti(Object.assign({}, defaults, { particleCount, origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 } }));
-      confetti(Object.assign({}, defaults, { particleCount, origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 } }));
-    }, 250);
+class Firework {
+ constructor() {
+  this.x = Math.random() * canvas.width;
+  this.y = canvas.height;
+  this.targetY = Math.random() * canvas.height * 0.45 + 80;
+  this.speed = 7;
+ }
+ update() {
+  this.y -= this.speed;
+  if (this.y <= this.targetY) {
+   explode(this.x, this.y);
+   return false;
+  }
+  return true;
+ }
+ draw() {
+  ctx.fillStyle = "white";
+  ctx.fillRect(this.x, this.y, 2, 12);
+ }
 }
 
-function continueNext() {
-    window.location.href = "next.html";
+class Particle {
+ constructor(x,y,color) {
+  this.x=x;
+  this.y=y;
+  this.angle=Math.random()*Math.PI*2;
+  this.speed=Math.random()*6+2;
+  this.life=90;
+  this.color=color;
+ }
+ update() {
+  this.x+=Math.cos(this.angle)*this.speed;
+  this.y+=Math.sin(this.angle)*this.speed + 0.6;
+  this.life--;
+ }
+ draw() {
+  ctx.fillStyle=this.color;
+  ctx.fillRect(this.x,this.y,3,3);
+ }
+}
+
+function stars(){
+ for(let i=0;i<80;i++){
+  let s=document.createElement('div'); s.className='star';
+  s.style.left=Math.random()*100+'vw';
+  s.style.top=Math.random()*100+'vh';
+  document.body.appendChild(s);
+ }
+}
+
+function explode(x,y){
+ boom.currentTime=0;
+ boom.play();
+
+ const colors=['#ffdd59','#ff69b4','#ff1493','#7efff5','#feca57','#ffffff'];
+ for(let i=0;i<90;i++){
+  particles.push(new Particle(x,y,colors[Math.floor(Math.random()*colors.length)]));
+ }
+}
+
+function animate(){
+ ctx.clearRect(0,0,canvas.width,canvas.height);
+
+ fireworks.forEach((fw,i)=>{
+  if(!fw.update()) fireworks.splice(i,1);
+  fw.draw();
+ });
+
+ particles.forEach((p,i)=>{
+  p.update();
+  p.draw();
+  if(p.life<=0) particles.splice(i,1);
+ });
+
+ requestAnimationFrame(animate);
+}
+
+/* Launch fireworks */
+setInterval(()=>fireworks.push(new Firework()),1300);
+animate();
+
+/* ================= BALLOONS (UNCHANGED) ================= */
+const balloonColors=['#ff69b4','#3498db','#f1c40f','#e74c3c','#9b59b6'];
+
+setInterval(()=>{
+ let b=document.createElement('div');
+ b.className='balloon';
+ b.style.background=balloonColors[Math.floor(Math.random()*balloonColors.length)];
+ b.style.left=Math.random()*100+'vw';
+ b.style.bottom='-60px';
+ document.body.appendChild(b);
+ setTimeout(()=>b.remove(),9000);
+},600);
+
+function goToCake(){
+ window.location.href='cake.html';
 }
 </script>
 
