--- a/index.html
+++ b/index.html
@@ -3,132 +3,153 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For Naina ✨</title>
+<title>Magical Moon Scene</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
 <style>
-*{box-sizing:border-box}
+*{box-sizing:border-box;}
+
 html,body{
- margin:0; padding:0; width:100%; height:100%; overflow:hidden;
- font-family:'Segoe UI',sans-serif;
- background: linear-gradient(to top, #2c3e70, #020111);
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  overflow:hidden;
+  font-family:'Dancing Script', cursive;
+  background: linear-gradient(to top, #2c3e70, #020111);
 }
 
 /* Countdown */
 #countdown{
-  position: fixed;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 6rem;
-  font-weight: bold;
-  color: #ffb6c1; /* romantic pink */
-  z-index: 10;
-
-  /* ✅ Same background as body */
+  position:fixed;
+  inset:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:6rem;
+  color:#ffd1dc;
   background: linear-gradient(to top, #2c3e70, #020111);
+  z-index:10;
 }
 
-/* Scene */
+/* Scene hidden initially */
 #scene{
- display:none; position:fixed; inset:0; min-height:100vh;
- color:white; text-align:center;
- display:flex; flex-direction:column;
- align-items:center; justify-content:center;
+  display:none;
+  position:fixed;
+  inset:0;
+  color:white;
+  text-align:center;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
 }
 
 /* Stars */
 .star{
- position:absolute; width:2px; height:2px;
- background:white; opacity:.8;
- animation:twinkle 2s infinite alternate;
+  position:absolute;
+  width:2px;
+  height:2px;
+  background:white;
+  opacity:.8;
+  animation:twinkle 2s infinite alternate;
 }
-@keyframes twinkle{from{opacity:.3}to{opacity:1}}
+@keyframes twinkle{
+  from{opacity:.4} to{opacity:1;}
+}
 
 /* Fireflies */
 .firefly{
- position:absolute; width:6px; height:6px;
- background:gold; border-radius:50%;
- box-shadow:0 0 8px gold;
- animation:fly 6s linear infinite;
+  position:absolute;
+  width:6px;
+  height:6px;
+  background:gold;
+  border-radius:50%;
+  box-shadow:0 0 8px gold;
+  animation:fly 6s linear infinite;
 }
 @keyframes fly{
- from{transform:translateY(0)}
- to{transform:translateY(-120vh); opacity:0}
+  from{transform:translateY(0)}
+  to{transform:translateY(-120vh); opacity:0;}
 }
 
-/* Moon */
+/* 🌕 CSS Realistic Moon */
 .moon{
- position:absolute; top:40px; right:40px;
- width:90px; height:90px;
- background:#fff; border-radius:50%;
- box-shadow:0 0 40px #fff;
+  position:absolute;
+  top:40px;
+  right:40px;
+  width:160px;
+  height:160px;
+  border-radius:50%;
+  background:
+    radial-gradient(circle at 30% 30%, #fdfdfd 20%, #e6e6e6 50%, #cfcfcf 75%),
+    radial-gradient(circle at 65% 55%, rgba(0,0,0,.12) 6%, transparent 8%),
+    radial-gradient(circle at 40% 70%, rgba(0,0,0,.10) 4%, transparent 6%),
+    radial-gradient(circle at 55% 35%, rgba(0,0,0,.08) 5%, transparent 7%);
+  box-shadow:
+    inset -18px -18px 28px rgba(0,0,0,.25),
+    0 0 50px rgba(255,255,255,.6);
+  opacity:0;
+  animation:moonIn 2.5s ease forwards;
+  animation-delay:1.5s;
 }
-
-/* Teddy Lottie */
-.teddy lottie-player{
- width:250px; max-width:80vw;
- animation:float 3s ease-in-out infinite;
-}
-@keyframes float{
- 0%{transform:translateY(0)}
- 50%{transform:translateY(-15px)}
- 100%{transform:translateY(0)}
+@keyframes moonIn{
+  from{opacity:0; transform:scale(.9);}
+  to{opacity:1; transform:scale(1);}
 }
 
 /* Message */
 .message{
- margin-top:15px; font-size:1.3rem; padding:0 20px;
- animation:fadeIn 3s ease forwards;
- opacity:0;
+  margin-top:20px;
+  font-size:2rem;
+  padding:0 30px;
+  opacity:0;
+  animation:fadeIn 3s ease forwards;
+  animation-delay:2.2s;
 }
 @keyframes fadeIn{
- from{opacity:0} to{opacity:1}
+  from{opacity:0; transform:translateY(12px);}
+  to{opacity:1; transform:translateY(0);}
 }
 
 /* Button */
 .next-btn{
- margin-top:25px; padding:12px 32px;
- font-size:1rem; border:none;
- border-radius:30px;
- background:#ff69b4; color:white;
- box-shadow:0 0 14px #ff69b4;
- cursor:pointer;
+  margin-top:30px;
+  padding:14px 42px;
+  font-family:'Dancing Script', cursive;
+  font-size:1.4rem;
+  border:none;
+  border-radius:40px;
+  background:linear-gradient(45deg,#ff69b4,#ff1493);
+  color:white;
+  cursor:pointer;
+  opacity:0;
+  animation:fadeIn 3s ease forwards;
+  animation-delay:2.8s;
+}
+.next-btn:hover{
+  transform:scale(1.05);
 }
 </style>
-
-<!-- Lottie Player -->
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
+
 <body>
 
 <div id="countdown">3...</div>
 
 <div id="scene">
- <div class="moon"></div>
+  <div class="moon"></div>
 
- <!-- Working Lottie Teddy holding heart -->
- <!-- <div class="teddy"> -->
-  <!-- <lottie-player -->
-    <!-- src="https://assets10.lottiefiles.com/packages/lf20_zl0t27qv.json" -->
-    <!-- background="transparent" -->
-    <!-- speed="1" -->
-    <!-- loop -->
-    <!-- autoplay> -->
-  <!-- </lottie-player> -->
- <!-- </div> -->
+  <div class="message">
+    Under this quiet moon,<br>
+    my heart beats only for you 💖
+  </div>
 
- <div class="message">
-  💖 I have something special for you ,<br>
-  
- </div>
-
- <button class="next-btn" onclick="goNext()">Tap for Next Surprise 💝</button>
+  <button class="next-btn" onclick="goNext()">Tap for Next Surprise</button>
 </div>
 
-<!-- Romantic Music -->
 <audio id="music" loop>
- <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_9c1b0e8f45.mp3" type="audio/mpeg">
+  <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_9c1b0e8f45.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -137,40 +158,45 @@ const cd=document.getElementById('countdown');
 const scene=document.getElementById('scene');
 const music=document.getElementById('music');
 
-const interval = setInterval(() => {
-    if(count > 0){
-        cd.innerText = count + '...';
-        count--;
-    } else {
-        clearInterval(interval);
-        cd.style.display = 'none';
-        scene.style.display = 'flex';
-        music.play();
-        stars();
-        fireflies();
-    }
-}, 1000);
+const timer=setInterval(()=>{
+  if(count>0){
+    cd.innerText = count+'...';
+    count--;
+  }else{
+    clearInterval(timer);
+    cd.style.display='none';
+    scene.style.display='flex';
+    music.play();
+    stars();
+    fireflies();
+  }
+},1000);
 
 function stars(){
- for(let i=0;i<80;i++){
-  let s=document.createElement('div'); s.className='star';
-  s.style.left=Math.random()*100+'vw';
-  s.style.top=Math.random()*100+'vh';
-  document.body.appendChild(s);
- }
+  for(let i=0;i<80;i++){
+    const s=document.createElement('div');
+    s.className='star';
+    s.style.left=Math.random()*100+'vw';
+    s.style.top=Math.random()*100+'vh';
+    document.body.appendChild(s);
+  }
 }
 
 function fireflies(){
- setInterval(()=>{
-  let f=document.createElement('div'); f.className='firefly';
-  f.style.left=Math.random()*100+'vw';
-  f.style.bottom='0';
-  document.body.appendChild(f);
-  setTimeout(()=>f.remove(),6000);
- },800);
+  setInterval(()=>{
+    const f=document.createElement('div');
+    f.className='firefly';
+    f.style.left=Math.random()*100+'vw';
+    f.style.bottom='0';
+    document.body.appendChild(f);
+    setTimeout(()=>f.remove(),6000);
+  },900);
 }
 
-function goNext(){window.location.href='next.html?celebrate=1'}
+function goNext(){
+  window.location.href='next.html';
+}
 </script>
+
 </body>
 </html>
