--- a/next.html
+++ b/next.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Romantic Celebration 🎆</title>
+<title>Magical Celebration 💖</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
+<!-- GSAP -->
+<script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+
 <style>
+*{box-sizing:border-box}
 html,body{
  margin:0;
  width:100%;
@@ -15,18 +18,10 @@ html,body{
  overflow:hidden;
  font-family:'Dancing Script',cursive;
  color:white;
- background: linear-gradient(to top, #2c3e70, #020111); /* SAME AS INDEX */
+ background: linear-gradient(to top, #2c3e70, #020111);
 }
 
-/* Fireworks canvas */
-canvas{
- position:fixed;
- inset:0;
- pointer-events:none;
- z-index:1;
-}
-
-/* Center content */
+/* 🌌 Center content */
 .center{
  position:absolute;
  inset:0;
@@ -35,194 +30,216 @@ canvas{
  justify-content:center;
  align-items:center;
  text-align:center;
- z-index:5;
+ z-index:10;
+ opacity:0;
 }
 
 h1{
- font-size:3rem;
- text-shadow:2px 2px 15px #000;
+ font-size:3.3rem;
 }
 
 p{
- font-size:1.5rem;
- text-shadow:1px 1px 8px #000;
+ font-size:1.6rem;
 }
 
+/* 💝 Button */
 button{
- margin-top:20px;
- padding:15px 40px;
- font-size:1.2rem;
+ margin-top:25px;
+ padding:18px 50px;
+ font-size:1.5rem;
+ font-family:'Dancing Script', cursive;
  border:none;
- border-radius:30px;
- background:#ff69b4;
+ border-radius:50px;
+ background: linear-gradient(45deg, #ff69b4, #ff1493);
  color:white;
  cursor:pointer;
- box-shadow:0 0 20px #ff1493;
- transition:.2s;
 }
-button:hover{transform:scale(1.1)}
 
-/* Stars */
+/* ⭐ Stars */
 .star{
- position:absolute; width:2px; height:2px;
- background:white; opacity:.8;
- animation:twinkle 2s infinite alternate;
+ position:absolute;
+ width:2px;
+ height:2px;
+ background:white;
+ opacity:.8;
 }
-@keyframes twinkle{from{opacity:.3}to{opacity:1}}
 
-/* Balloons */
+/* 🎈 Balloons */
 .balloon{
  position:absolute;
- width:32px;
- height:45px;
+ width:34px;
+ height:48px;
  border-radius:50%;
- animation: floatBalloon 9s linear forwards;
- z-index:3;
 }
 
-@keyframes floatBalloon{
- from{transform:translateY(0)}
- to{transform:translateY(-120vh)}
+/* 🎊 Subtle Confetti */
+.confetti{
+ position:absolute;
+ width:8px;
+ height:12px;
+ opacity:0.7;
+}
+
+/* 🌕 Realistic CSS Moon */
+.moon{
+  position:absolute;
+  top:40px;
+  right:40px;
+  width:140px;
+  height:140px;
+  border-radius:50%;
+  background:
+    radial-gradient(circle at 30% 30%, #fdfdfd 20%, #e6e6e6 50%, #cfcfcf 75%),
+    radial-gradient(circle at 65% 55%, rgba(0,0,0,.12) 6%, transparent 8%),
+    radial-gradient(circle at 40% 70%, rgba(0,0,0,.10) 4%, transparent 6%),
+    radial-gradient(circle at 55% 35%, rgba(0,0,0,.08) 5%, transparent 7%);
+  box-shadow:
+    inset -12px -12px 20px rgba(0,0,0,.25),
+    0 0 40px rgba(255,255,255,.5);
+  opacity:1; /* visible immediately */
+  transform:scale(1); /* stable scale */
+}
+
+
+/* 🌙 Glow behind moon */
+.moon-glow{
+  position:absolute;
+  top:30px;
+  right:30px;
+  width:180px;
+  height:180px;
+  border-radius:50%;
+  background: radial-gradient(circle, rgba(255,255,255,0.15) 0%, transparent 70%);
+  opacity:0.3; /* subtle stable glow */
+}
+@keyframes glowIn{
+ from{opacity:0;}
+ to{opacity:1;}
 }
 </style>
 </head>
 
 <body>
 
-<!-- Fireworks -->
-<canvas id="fireworks"></canvas>
+<div class="moon-glow"></div>
+<div class="moon"></div>
 
-<!-- Text (UNCHANGED) -->
 <div class="center">
- <h1>Time to Celebrate! 🎉</h1>
- <p>The countdown is over...</p>
- <button onclick="goToCake()">Let's Celebrate 💖</button>
- <p>Enjoy this magical moment ✨</p>
+ <h1>✨ Time to Celebrate ✨</h1>
+ <p>The wait is over… this moment is for you 💖</p>
+ <button onclick="goToCake()">🎁 Tap for the Surprise</button>
+ <p>Enjoy every second ✨</p>
 </div>
 
-<!-- Music -->
-<audio autoplay loop>
+<audio id="music" autoplay loop>
  <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_9c1b0e8f45.mp3">
 </audio>
 
-<!-- Firework blast sound -->
-<audio id="boom">
- <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_1b6d6f6b2f.mp3">
-</audio>
-
 <script>
-/* ================= REAL FIREWORKS ================= */
-const canvas = document.getElementById("fireworks");
-const ctx = canvas.getContext("2d");
-canvas.width = innerWidth;
-canvas.height = innerHeight;
+/* 🌟 STARS */
+for(let i=0;i<120;i++){
+ const s=document.createElement('div');
+ s.className='star';
+ s.style.left=Math.random()*100+'vw';
+ s.style.top=Math.random()*100+'vh';
+ document.body.appendChild(s);
 
-window.onresize = () => {
- canvas.width = innerWidth;
- canvas.height = innerHeight;
-};
-
-const fireworks = [];
-const particles = [];
-stars();
-const boom = document.getElementById("boom");
-
-class Firework {
- constructor() {
-  this.x = Math.random() * canvas.width;
-  this.y = canvas.height;
-  this.targetY = Math.random() * canvas.height * 0.45 + 80;
-  this.speed = 7;
- }
- update() {
-  this.y -= this.speed;
-  if (this.y <= this.targetY) {
-   explode(this.x, this.y);
-   return false;
-  }
-  return true;
- }
- draw() {
-  ctx.fillStyle = "white";
-  ctx.fillRect(this.x, this.y, 2, 12);
- }
-}
-
-class Particle {
- constructor(x,y,color) {
-  this.x=x;
-  this.y=y;
-  this.angle=Math.random()*Math.PI*2;
-  this.speed=Math.random()*6+2;
-  this.life=90;
-  this.color=color;
- }
- update() {
-  this.x+=Math.cos(this.angle)*this.speed;
-  this.y+=Math.sin(this.angle)*this.speed + 0.6;
-  this.life--;
- }
- draw() {
-  ctx.fillStyle=this.color;
-  ctx.fillRect(this.x,this.y,3,3);
- }
-}
-
-function stars(){
- for(let i=0;i<80;i++){
-  let s=document.createElement('div'); s.className='star';
-  s.style.left=Math.random()*100+'vw';
-  s.style.top=Math.random()*100+'vh';
-  document.body.appendChild(s);
- }
-}
-
-function explode(x,y){
- boom.currentTime=0;
- boom.play();
-
- const colors=['#ffdd59','#ff69b4','#ff1493','#7efff5','#feca57','#ffffff'];
- for(let i=0;i<90;i++){
-  particles.push(new Particle(x,y,colors[Math.floor(Math.random()*colors.length)]));
- }
-}
-
-function animate(){
- ctx.clearRect(0,0,canvas.width,canvas.height);
-
- fireworks.forEach((fw,i)=>{
-  if(!fw.update()) fireworks.splice(i,1);
-  fw.draw();
+ gsap.to(s,{
+   opacity:Math.random(),
+   duration:Math.random()*2+1,
+   repeat:-1,
+   yoyo:true
  });
-
- particles.forEach((p,i)=>{
-  p.update();
-  p.draw();
-  if(p.life<=0) particles.splice(i,1);
- });
-
- requestAnimationFrame(animate);
 }
 
-/* Launch fireworks */
-setInterval(()=>fireworks.push(new Firework()),1300);
-animate();
-
-/* ================= BALLOONS (UNCHANGED) ================= */
+/* 🎈 BALLOONS */
 const balloonColors=['#ff69b4','#3498db','#f1c40f','#e74c3c','#9b59b6'];
-
 setInterval(()=>{
- let b=document.createElement('div');
+ const b=document.createElement('div');
  b.className='balloon';
  b.style.background=balloonColors[Math.floor(Math.random()*balloonColors.length)];
  b.style.left=Math.random()*100+'vw';
  b.style.bottom='-60px';
  document.body.appendChild(b);
- setTimeout(()=>b.remove(),9000);
-},600);
 
+ gsap.to(b,{
+   y:-window.innerHeight-100,
+   x:Math.random()*100-50,
+   rotation:Math.random()*30,
+   duration:10,
+   ease:"sine.out",
+   onComplete:()=>b.remove()
+ });
+},1200); // slower, less frequent, elegant
+
+/* 🎊 Subtle Confetti */
+const confettiColors=['#ff69b4','#ffdd59','#7efff5','#ffffff','#feca57'];
+setInterval(()=>{
+ for(let i=0;i<4;i++){  // reduced number
+   const c=document.createElement('div');
+   c.className='confetti';
+   c.style.background=confettiColors[Math.floor(Math.random()*confettiColors.length)];
+   c.style.left=Math.random()*100+'vw';
+   document.body.appendChild(c);
+
+   gsap.fromTo(c,
+     {y:-50, rotation:0},
+     {
+       y:window.innerHeight+50,
+       rotation:360,
+       duration:Math.random()*2+3,
+       ease:"power1.out",
+       onComplete:()=>c.remove()
+     }
+   );
+ }
+},1000); // slower and subtle
+
+/* 🎬 INTRO ANIMATION */
+gsap.to(".center",{
+ opacity:1,
+ duration:2,
+ delay:1
+});
+
+gsap.from("h1",{
+ y:-40,
+ opacity:0,
+ duration:2,
+ delay:1.5
+});
+
+gsap.from("p",{
+ opacity:0,
+ y:20,
+ duration:2,
+ stagger:0.5,
+ delay:2
+});
+
+gsap.from("button",{
+ scale:0,
+ duration:1.5,
+ ease:"elastic.out(1,0.4)",
+ delay:3
+});
+
+/* 💓 Button heartbeat */
+gsap.to("button",{
+ scale:1.08,
+ duration:0.8,
+ repeat:-1,
+ yoyo:true,
+ delay:4
+});
+
+/* 🚀 PAGE TRANSITION */
 function goToCake(){
- window.location.href='cake.html';
+ gsap.to("body",{
+   opacity:0,
+   duration:1.2,
+   onComplete:()=>window.location.href="cake.html"
+ });
 }
 </script>
 
